<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservasi_langkah2_judul"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reservasi_ketua_rombongan"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                    android:textStyle="bold"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_ketua_nama"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/reservasi_nama_ketua_hint">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_ketua_nama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:enabled="false"
                        android:importantForAccessibility="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_ketua_nik"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/reservasi_nik_ketua_hint">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_ketua_nik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:inputType="number"
                        android:importantForAccessibility="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_ketua_telepon"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/item_pendaki_telp_hint">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_ketua_telepon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:inputType="phone"
                        android:importantForAccessibility="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_ketua_darurat"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/item_pendaki_darurat_hint">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_ketua_darurat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:inputType="text"
                        android:importantForAccessibility="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_ketua_alamat"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/item_pendaki_alamat_hint">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_ketua_alamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:inputType="textMultiLine"
                        android:maxLines="3"
                        android:importantForAccessibility="no" />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/btn_upload_surat_ketua"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/item_pendaki_pilih_surat"
                    app:icon="@drawable/ic_person" />

                <TextView
                    android:id="@+id/tv_nama_file_surat_ketua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/item_pendaki_file_belum_dipilih"
                    android:textAlignment="center" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/layout_list_pendaki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>